# rylan-unifi-case-study

./: .bandit  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint  AUDIT-SUMMARY.md  Achieve infinite reality.txt  CHANGELOG.md  CLOUDKEY-INTEGRATION-COMPLETE.md  COMMIT-MESSAGE.md  CONSCIOUSNESS.md  EXACT-FILE-DIFFS.md  GOLD-STAR-ACHIEVEMENT-PLAN.md  ITERATION-PROXMOX-IGNITE-V2.instructions.md  LORE.md  PHASE-1-COMPLETION.md  PHASE-2-IMPLEMENTATION-COMPLETE.md  PHASE-2-LAUNCH.md  PHASE-2-REALITY-CHECK.md  PHASE-2-STATUS.md  PR-TRINITY-V4-MERGE-READY.md  Phase 3 endgame— v2.0-eternal.txt  QC-FINAL-REPORT.md  README.md  ROADMAP.md  TRINITY-V4-FINAL-SUMMARY.md  VICTORY-BANNER.txt  eternal-resurrect.sh  fix_fences.py  gatekeeper.sh  package.json  pyproject.toml  repo_structure.md  repo_structure.txt  requirements.txt  v5.2.1.md  validate-eternal.sh
.githooks/: commit-msg  post-commit  post-merge  pre-commit  prepare-commit-msg
.github/: copilot-instructions.md
.husky/: pre-push
.secrets/: .gitignore
01-bootstrap/: 00-eternal-first-login.sh  HOMOGENEITY.md  adopt-devices-wrapper.sh  adopt-devices.py  backup-orchestrator.sh  install-unifi.sh  netplan-rylan-dc.yaml  samba-provision.sh  setup-nfs-kerberos.sh  validate-rylan-dc.sh
01_bootstrap/: 00-eternal-first-login.sh  HOMOGENEITY.md  adopt-devices-wrapper.sh  adopt_devices.py  backup-orchestrator.sh  install-unifi-controller.sh  install-unifi.sh  netplan-rylan-dc.yaml  samba-provision.sh  setup-nfs-kerberos.sh  validate-rylan-dc.sh
02-declarative-config/: README.md  apply-wrapper.sh  apply.py  firewall-rules.yaml.backup  policy-table-rylan-v5.json  policy-table.yaml  qos-smartqueue.yaml  switch-profiles.yaml  vlans.yaml
(+335 files in other folders)
